# subs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: cli.rs  cli.yml  conf.rs  config.rs  daemon.rs  error.rs  main.rs  player.rs  queue.rs  subcmd.rs
